[gd_scene load_steps=9 format=3 uid="uid://fbe37xs24fad"]

[ext_resource type="Script" uid="uid://cfnw333svbonv" path="res://objects/boss/script_boss_health.gd" id="1_gy2q1"]
[ext_resource type="Texture2D" uid="uid://vq3ht7e2yku2" path="res://objects/boss/healthbar-under.png" id="1_qyljf"]
[ext_resource type="Texture2D" uid="uid://61icuvebyc38" path="res://objects/boss/healthbar-progress.png" id="2_7wak1"]
[ext_resource type="FontFile" uid="uid://ccbf3s442slah" path="res://resources/fonts/chuckcounter_font.png" id="3_7wak1"]

[sub_resource type="Animation" id="Animation_7wak1"]
resource_name = "appear"
length = 0.5333367
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texprogbar_health:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.53333336),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 0), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texprogbar_health:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.53333336),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(96, 153), Vector2(96, 146)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texprogbar_name:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 0), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("texprogbar_name:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(96, 153), Vector2(96, 146)]
}

[sub_resource type="Animation" id="Animation_gy2q1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texprogbar_health:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texprogbar_name:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0)]
}

[sub_resource type="Animation" id="Animation_2md8d"]
resource_name = "disappear"
length = 0.5333367
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texprogbar_health:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.53333336),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texprogbar_health:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.53333336),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(96, 146), Vector2(96, 153)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texprogbar_name:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(-5.9604645e-08, 0.53333336),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("texprogbar_name:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(-5.9604645e-08, 0.53333336),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(96, 146), Vector2(96, 153)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2md8d"]
_data = {
&"RESET": SubResource("Animation_gy2q1"),
&"appear": SubResource("Animation_7wak1"),
&"disappear": SubResource("Animation_2md8d")
}

[node name="ctrl_boss_health" type="Control"]
z_index = 120
layout_mode = 3
anchors_preset = 0
offset_right = 320.0
offset_bottom = 180.0
script = ExtResource("1_gy2q1")

[node name="texprogbar_health" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -27.0
offset_right = 64.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1, 1e-05)
max_value = 4.0
value = 4.0
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4
texture_under = ExtResource("1_qyljf")
texture_progress = ExtResource("2_7wak1")

[node name="texprogbar_name" type="Label" parent="."]
layout_mode = 0
offset_left = 96.0
offset_top = 153.0
offset_right = 224.0
offset_bottom = 167.0
scale = Vector2(1, 1e-05)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_7wak1")
theme_override_font_sizes/font_size = 8
text = "UNKNOWN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="aniplr" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_2md8d")
}

[node name="timer_introtime" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="timer_introtime" to="." method="_onTimeout"]
